# marclte

./: Claude.md  README.md  render.yaml  requirements.txt
.github/workflows/: build-mac-installer.yml
docs/: app.js  config.js  index.html  styles.css
engine/: pyproject.toml
engine/marclite/: __init__.py  cli.py  formats.py  mrk.py
engine/tests/: test_marclite.py
engine/tests/fixtures/: tiny.mrk  tiny.xml
macapp/MarcliteMac/MarcliteMac/: ContentView.swift  Info.plist  MarcliteMacApp.swift  MarcliteRunner.swift
macapp/MarcliteMac/MarcliteMac.xcodeproj/: project.pbxproj
web/: app.py
